adding font + logic of routes + header

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,1 +1,7 @@
-<p>landing-page works!</p>
+<div class="content">
+    <h1 class="title">Rémi JARA</h1>
+    <img src="assets/photo.png" alt="photo" id="photo">
+    <app-button [text]="'projects'"></app-button>
+    <app-button [text]="'contact'"></app-button>
+    <app-button [text]="'about'"></app-button>
+</div>
