--- a/src/app/project-card/project-card.component.scss
+++ b/src/app/project-card/project-card.component.scss
@@ -1,6 +1,5 @@
 .card {
-    width: 50%;
-    height: 50%;
+    margin: 20px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
@@ -11,10 +10,6 @@
     align-items: center;
     transition: all 0.3s ease-in-out;
     background: linear-gradient(45deg, #cd6e6e, rgb(211, 170, 23));
-    &:hover {
-        box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
-        transform: translateY(-5px);
-    }
     .title {
         font-size: 1.5rem;
         font-weight: 600;
