--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,3 @@
-<app-project-card *ngFor="let project of projects" [project]="project"></app-project-card>
+<div class="projects">
+    <app-project-card *ngFor="let project of projects" [project]="project"></app-project-card>
+</div>
