--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,38 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background-color: #121111;
+}
+
+@font-face {
+    font-family: "Monocraft";
+    src: url("assets/fonts/Monocraft.otf");
+}
+
+* {
+    font-family: "Monocraft";
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+    display: block;
+    position: relative;
+    padding: 0.2em 0;
+    overflow: hidden;
+    &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background-color: #fff;
+        opacity: 0;
+        transition: opacity 400ms, transform 400ms;
+        transform: translate3d(-100%, 0, 0);
+    }
+
+    &:hover::after {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
