adding many gif for projects + starting reponsive on landing page

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,7 +1,14 @@
-<div class="content">
-    <h1 class="title">Rémi JARA</h1>
-    <img src="assets/photo.png" alt="photo" id="photo">
-    <app-button [text]="'projects'"></app-button>
-    <app-button [text]="'contact'"></app-button>
-    <app-button [text]="'about'"></app-button>
+<div class="container">
+    <div class="header">
+        <h1 class="title">Rémi JARA</h1>
+        <img src="assets/photo.png" alt="photo" id="photo">
+        <p id="description">Hi, I am Rémi, french student in computer science, I am passionate about development, and
+            I
+            will share with you through this site some of my projects !</p>
+    </div>
+    <div class="content">
+        <app-button [text]="'projects'" class="link"></app-button>
+        <app-button [text]="'about'" class="link"></app-button>
+        <app-button [text]="'contact'" class="link"></app-button>
+    </div>
 </div>
