--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -11,19 +11,58 @@
 
 .content {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     text-align: center;
-    height: 100%;
-    .title {
+    height: 20%;
+    width: 75%;
+    .link {
         font-size: 3rem;
         font-weight: 600;
-        color: rgb(246, 180, 180);
+        color: #fff;
     }
-    .subtitle {
-        font-size: 1rem;
-        font-weight: 400;
-        color: #333;
+}
+
+.header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    .title {
+        font-size: 4rem;
+        font-weight: 600;
+        color: #8d72e1;
+    }
+    #description {
+        font-size: 1.5rem;
+        font-weight: 600;
+        color: #fff;
+        width: 20%;
+        text-align: center;
+        margin-top: 3rem;
+    }
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 100%;
+}
+
+@media (max-width: 1100px) {
+    .content {
+        flex-direction: column;
+        width: 100%;
+    }
+    .header {
+        .title {
+            font-size: 3rem;
+        }
+        #description {
+            width: 50%;
+        }
     }
 }
