improving cards for projects

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="header">
         <h1 class="title">Rémi JARA</h1>
-        <img src="assets/photo.png" alt="photo" id="photo">
+        <img src="assets/photo1.png" alt="photo" id="photo">
         <p id="description">Hi, I am Rémi, french student in computer science, I am passionate about development, and
             I
             will share with you through this site some of my projects !</p>
