--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,6 +5,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    padding: 20px;
     a {
         margin: 0 10px;
         font-size: 1.5rem;
