--- a/src/app/project-card/project-card.component.scss
+++ b/src/app/project-card/project-card.component.scss
@@ -1,27 +1,121 @@
 .card {
-    margin: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
-    padding: 10px 30px;
+    margin: 40px;
+    width: 30vw;
+    height: 30vw;
+    border-radius: 50% 50% 0% 50% / 50% 50% 0% 50%;
+    border: 5px solid #8d72e1;
+    padding: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     transition: all 0.3s ease-in-out;
-    background: linear-gradient(45deg, #cd6e6e, rgb(211, 170, 23));
+    background-color: #fff;
     .title {
-        font-size: 1.5rem;
         font-weight: 600;
-        color: #333;
+        width: 50%;
+        text-align: center;
+        overflow: hidden;
+        a {
+            font-size: 2.2rem;
+        }
     }
-    .image {
+    a {
+        color: #8d72e1;
+        text-decoration: none;
+        font-size: 1.5rem;
+    }
+
+    div {
+        margin-bottom: 2%;
+    }
+
+    .content {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
         width: 100%;
-        height: 100%;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
+        .image img {
+            width: 100%;
+            object-fit: cover;
+            border-radius: 5px;
+            margin-bottom: 10px;
+        }
+
+        .text {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: center;
+            width: 30vw;
+            height: 15vw;
+            .tools {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+                ul {
+                    padding: 0;
+                }
+                p {
+                    margin: 0;
+                    font-size: 2.5rem;
+                }
+                .tool {
+                    width: 100%;
+                    font-size: 1.5rem;
+                }
+            }
+
+            img {
+                width: 30px;
+                height: 30px;
+                margin-left: 10px;
+            }
+
+            a {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+    }
+
+    .button {
+        background-color: #fff;
+        border: none;
         border-radius: 5px;
-        margin-bottom: 10px;
+        padding: 10px 20px;
+        font-size: 1rem;
+        font-weight: 600;
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
+        &:hover {
+            background-color: #333;
+            color: #fff;
+        }
+    }
+}
+
+@media (max-width: 1650px) {
+    .card {
+        width: 40vw;
+        height: 40vw;
+    }
+}
+
+@media (max-width: 1200px) {
+    .card {
+        width: 50vw;
+        height: 50vw;
+    }
+}
+
+@media (max-width: 1000px) {
+    .card {
+        width: 65vw;
+        height: 65vw;
     }
 }
