--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,21 +21,23 @@ a {
     position: relative;
     padding: 0.2em 0;
     overflow: hidden;
-    &::after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 2px;
-        background-color: #fff;
-        opacity: 0;
-        transition: opacity 400ms, transform 400ms;
-        transform: translate3d(-100%, 0, 0);
-    }
+    &.link {
+        &::after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background-color: #8d72e1;
+            opacity: 0;
+            transition: opacity 400ms, transform 400ms;
+            transform: translate3d(-100%, 0, 0);
+        }
 
-    &:hover::after {
-        opacity: 1;
-        transform: translate3d(0, 0, 0);
+        &:hover::after {
+            opacity: 1;
+            transform: translate3d(0, 0, 0);
+        }
     }
 }
