--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,7 @@
 <div class="links">
     <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="link">Home</a>
-    <a routerLink="/projects" routerLinkActive="active" class="link">Projects</a>
+    <a routerLink="/projects" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
+        class="link">Projects</a>
     <a routerLink="/contact" routerLinkActive="active" class="link">Contact</a>
     <a routerLink="/about" routerLinkActive="active" class="link">About</a>
 </div>
