--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -18,7 +18,7 @@
     height: 20%;
     width: 75%;
     .link {
-        font-size: 3rem;
+        font-size: 4rem;
         font-weight: 600;
         color: #fff;
     }
@@ -35,7 +35,7 @@
         background: rgb(141, 114, 225);
         background: linear-gradient(
             90deg,
-            rgba(141, 114, 225, 1) 0%,
+            #5435b3 0%,
             rgba(9, 85, 121, 1) 51%,
             rgba(0, 212, 255, 1) 100%
         );
@@ -50,7 +50,7 @@
     #description {
         font-size: 1.5rem;
         font-weight: 600;
-        color: #fff;
+        color: #333;
         width: 20%;
         text-align: center;
         margin-top: 3rem;
@@ -65,7 +65,7 @@
     height: 100%;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1250px) {
     .content {
         flex-direction: column;
         width: 100%;
