--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: #121111;
+    background-color: #490050;
     height: 100vh;
     margin: 0;
     padding: 0;
@@ -16,7 +16,7 @@ body {
 
 a {
     text-decoration: none;
-    color: #8d72e1;
+    color: #5435b3;
     display: block;
     position: relative;
     padding: 0.2em 0;
@@ -28,16 +28,61 @@ a {
             bottom: 0;
             left: 0;
             width: 100%;
-            height: 2px;
-            background-color: #8d72e1;
+            height: 3px;
+            background-color: #5435b3;
             opacity: 0;
             transition: opacity 400ms, transform 400ms;
-            transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-105%, 0, 0);
         }
 
         &:hover::after {
             opacity: 1;
             transform: translate3d(0, 0, 0);
         }
+    }
+}
+
+path {
+    transform-origin: 50% 0%;
+}
+.background--custom {
+    background-color: #ffffff;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+    top: 0;
+    left: 0;
+}
+@keyframes path0 {
+    0% {
+        transform: rotate(-50deg);
+    }
+    100% {
+        transform: rotate(50deg);
+    }
+}
+@keyframes path1 {
+    0% {
+        transform: rotate(20deg);
+    }
+    100% {
+        transform: rotate(-20deg);
+    }
+}
+@keyframes path2 {
+    0% {
+        transform: rotate(-10deg);
+    }
+    100% {
+        transform: rotate(10deg);
+    }
+}
+@keyframes path3 {
+    0% {
+        transform: rotate(50deg);
+    }
+    100% {
+        transform: rotate(-50deg);
     }
 }
