adding go up button

--- a/src/app/project-card/project-card.component.scss
+++ b/src/app/project-card/project-card.component.scss
@@ -136,6 +136,14 @@
     .url-project {
         .link {
             margin-bottom: 10px;
+            &::after {
+                width: 80%;
+            }
+        }
+    }
+    .link {
+        &::after {
+            width: 70%;
         }
     }
 
