scroll event to display project links

--- a/src/app/go-up/go-up.component.html
+++ b/src/app/go-up/go-up.component.html
@@ -1,4 +1,4 @@
-<a href="/projects">
+<a (click)="onActivate($event)">
     <div class="go-up">
         <img src="assets/images/arrow_up.svg" alt="Go up">
     </div>
