--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -2,7 +2,8 @@
     <div class="header">
         <h1 class="title">Rémi JARA</h1>
         <img src="assets/photo.png" alt="photo" id="photo">
-        <p id="description">Hi, I am Rémi, french student in computer science, I am passionate about development, and
+        <p id="description">Hi, I am Rémi, french student in computer science, I am passionate about development,
+            and
             I
             will share with you through this site some of my projects !</p>
     </div>
