--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -7,6 +7,7 @@
     &:hover {
         filter: grayscale(0%);
     }
+    animation: appearAnimScale 1s ease-in-out;
 }
 
 .content {
@@ -21,6 +22,15 @@
         font-size: 4rem;
         font-weight: 600;
         color: #fff;
+        &:nth-child(1) {
+            animation: appearAnimLeft 1s ease-in-out;
+        }
+        &:nth-child(2) {
+            animation: appearAnimBottom 1s ease-in-out;
+        }
+        &:nth-child(3) {
+            animation: appearAnimRight 1s ease-in-out;
+        }
     }
 }
 
@@ -46,6 +56,7 @@
         -webkit-text-fill-color: transparent;
         -moz-background-clip: text;
         -moz-text-fill-color: transparent;
+        animation: appearAnimTop 1.1s ease-in-out;
     }
     #description {
         font-size: 1.5rem;
@@ -54,6 +65,7 @@
         width: 20%;
         text-align: center;
         margin-top: 3rem;
+        animation: appearOpacity 2s ease-in-out;
     }
 }
 
@@ -63,6 +75,10 @@
     align-items: center;
     justify-content: space-evenly;
     height: 100%;
+}
+
+.container {
+    overflow: hidden;
 }
 
 @media (max-width: 1250px) {
@@ -77,5 +93,59 @@
         #description {
             width: 50%;
         }
+    }
+}
+
+@keyframes appearAnimScale {
+    0% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes appearAnimLeft {
+    0% {
+        transform: translateX(-1000px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+@keyframes appearAnimTop {
+    0% {
+        transform: translateY(-1000px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+@keyframes appearAnimRight {
+    0% {
+        transform: translateX(1000px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+@keyframes appearAnimBottom {
+    0% {
+        transform: translateY(1000px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+@keyframes appearOpacity {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
     }
 }
