responsive header + responsive phone landing page

--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -96,6 +96,29 @@
     }
 }
 
+@media only screen and (hover: none) and (pointer: coarse) {
+    .container {
+        overflow: scroll;
+        height: auto;
+    }
+
+    .background--custom {
+        background-color: #ffffff;
+        position: absolute;
+        width: 100vw;
+        height: 150vh;
+        z-index: -1;
+        top: 0;
+        left: 0;
+    }
+
+    .header {
+        #description {
+            width: 70%;
+        }
+    }
+}
+
 @keyframes appearAnimScale {
     0% {
         transform: scale(0);
