--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,14 +4,23 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    padding: 20px;
+    padding: 30px;
     a {
-        margin: 0 10px;
-        font-size: 1.5rem;
+        margin: 0 20px;
+        font-size: 2.2rem;
         font-weight: 600;
         color: #fff;
         &.active {
-            color: red;
+            color: #8d72e1;
+        }
+    }
+}
+
+@media (max-width: 800px) {
+    .links {
+        flex-direction: column;
+        a {
+            margin: 10px 0;
         }
     }
 }
