--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -13,7 +13,7 @@
         <app-button [text]="'contact'" class="link"></app-button>
     </div>
 </div>
-<svg class="background--custom" id="demo" viewBox="0 0 100 100" preserveAspectRatio="none">
+<svg class="background--custom" viewBox="0 0 100 100" preserveAspectRatio="none">
     <path fill="#75d0a6" fill-opacity="1" d="M-100 -100L200 -100L200 80L-100 80Z"
         style="animation: path0 8.771929824561402s linear infinite alternate;" />
     <path fill="#58a100" fill-opacity="0.3" d="M-100 -100L200 -100L200 40L-100 40Z"
