--- a/src/app/single-project-card/single-project-card.component.html
+++ b/src/app/single-project-card/single-project-card.component.html
@@ -1,4 +1,5 @@
 <div class="project">
+    <p>Still in development...</p>
     <div class="project__title">
         <h1>{{ project.name }}</h1>
     </div>
