--- a/src/app/go-up/go-up.component.scss
+++ b/src/app/go-up/go-up.component.scss
@@ -11,11 +11,27 @@
         width: 100%;
         height: 100%;
     }
+    cursor: pointer;
+    &:hover {
+        animation: bounce 0.5s ease-in-out infinite;
+    }
 }
 
 @media (max-width: 1000px) {
     .go-up {
         width: 15vw;
         height: 15vw;
+    }
+}
+
+@keyframes bounce {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-15px);
+    }
+    100% {
+        transform: translateY(0);
     }
 }
