--- a/src/app/project-card/project-card.component.scss
+++ b/src/app/project-card/project-card.component.scss
@@ -2,8 +2,8 @@
     margin: 40px;
     width: 37vw;
     height: 30vw;
-    // border-radius: 50% 50% 0% 50% / 50% 50% 0% 50%;
-    border-radius: 100%;
+    border-radius: 50% 50% 0% 50% / 50% 50% 0% 50%;
+    // border-radius: 100%;
     border: 5px solid #8d72e1;
     display: flex;
     flex-direction: column;
@@ -322,8 +322,8 @@
 
 @media (max-width: 600px) {
     .card {
-        width: 90vw;
-        height: 80vw;
+        width: 80vw;
+        height: 90vw;
         .content {
             .image {
                 img {
@@ -333,10 +333,57 @@
             .text {
                 .tools {
                     p {
-                        font-size: 1.8rem;
+                        font-size: 1.2rem;
+                    }
+                    .tool {
+                        li {
+                            font-size: 1rem;
+                        }
                     }
                 }
                 height: 35vw;
+            }
+        }
+    }
+
+    .move-left {
+        transform: translateX(0);
+    }
+
+    .move-right {
+        transform: translateX(0);
+    }
+
+    .footer {
+        width: 35%;
+    }
+}
+
+@media only screen and (hover: none) and (pointer: coarse) {
+    .card {
+        width: 85vw;
+        height: 100vw;
+        .content {
+            .image {
+                img {
+                    width: 70%;
+                }
+            }
+            .text {
+                .tools {
+                    p {
+                        font-size: 1rem;
+                    }
+                    .tool {
+                        font-size: 1rem;
+                    }
+                }
+                height: 35vw;
+            }
+        }
+        .title {
+            a {
+                font-size: 1.2rem;
             }
         }
     }
