--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,14 @@
-<p>about works!</p>
+<div class="content">
+    <div *ngFor="let language of languages" id="languages" class="about">
+        <h3>{{language.title}}</h3>
+        <img [src]="language.image" alt="{{language.title}}">
+    </div>
+    <div *ngFor="let tool of tools" id="tools" class="about">
+        <h3>{{tool.title}}</h3>
+        <img [src]="tool.image" alt="{{tool.title}}">
+    </div>
+    <div *ngFor="let hobby of hobbies" id="hobbies" class="about">
+        <h3>{{hobby.title}}</h3>
+        <img [src]="hobby.image" alt="{{hobby.title}}">
+    </div>
+</div>
