--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,14 +3,11 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 100%;
-    padding: 30px;
     a {
-        margin: 0 20px;
+        margin: 20px 20px;
         font-size: 2.2rem;
         font-weight: 600;
-        color: #fff;
+        color: #000;
         &.active {
             color: #8d72e1;
         }
