--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: #490050;
+    background-color: #fff;
     height: 100vh;
     margin: 0;
     padding: 0;
@@ -8,6 +8,18 @@ body {
 @font-face {
     font-family: "Monocraft";
     src: url("assets/fonts/Monocraft.otf");
+}
+
+::-webkit-scrollbar {
+    width: 15px;
+    overflow-y: scroll;
+    background: #fff;
+    box-shadow: inset 0 0 3px #707070;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #707070;
+    border-radius: 10px;
 }
 
 * {
