animation on scroll works well on page about

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,13 +1,16 @@
 <div class="content">
-    <div *ngFor="let language of languages" id="languages" class="about">
+    <div *ngFor="let language of languages" id="languages"
+        [ngClass]="language.animation == true ? 'animate' : 'disabled'" class="about">
         <h3>{{language.title}}</h3>
         <img [src]="language.image" alt="{{language.title}}">
     </div>
-    <div *ngFor="let tool of tools" id="tools" class="about">
+    <div *ngFor="let tool of tools" id="tools" class="about"
+        [ngClass]="tool.animation == true ? 'animate' : 'disabled'">
         <h3>{{tool.title}}</h3>
         <img [src]="tool.image" alt="{{tool.title}}">
     </div>
-    <div *ngFor="let hobby of hobbies" id="hobbies" class="about">
+    <div *ngFor="let hobby of hobbies" id="hobbies" class="about"
+        [ngClass]="hobby.animation == true ? 'animate' : 'disabled'">
         <h3>{{hobby.title}}</h3>
         <img [src]="hobby.image" alt="{{hobby.title}}">
     </div>
