--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -12,7 +12,7 @@
             color: #8d72e1;
         }
     }
-    border-bottom: 1px solid #ccc;
+    background-color: rgb(255, 255, 255, 0.3);
 }
 
 @media (max-width: 800px) {
