--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -24,16 +24,39 @@
     img {
         height: 3vw;
     }
+    // @for $i from 1 through 21 {
+    //     &:nth-child(#{$i}) {
+    //         h3 {
+    //             animation: appearFromLeft #{($i / 10) + 0.5}s ease-in-out;
+    //         }
+    //         img {
+    //             animation: appearFromRight #{($i / 10) + 0.5}s ease-in-out;
+    //         }
+    //     }
+    // }
+    // h3 {
+    //     transform: translateX(-1000px);
+    // }
+    // img {
+    //     transform: translateX(1000px);
+    // }
+}
+
+.animate {
     @for $i from 1 through 21 {
         &:nth-child(#{$i}) {
             h3 {
-                animation: appearFromLeft #{($i / 10) + 0.5}s ease-in-out;
+                animation: appearFromLeft #{($i / 15) + 0.5}s ease-in-out;
             }
             img {
-                animation: appearFromRight #{($i / 10) + 0.5}s ease-in-out;
+                animation: appearFromRight #{($i / 15) + 0.5}s ease-in-out;
             }
         }
     }
+}
+
+.disabled {
+    opacity: 0;
 }
 
 @media (max-width: 1150px) {
@@ -66,22 +89,22 @@
 
 @keyframes appearFromLeft {
     from {
-        transform: translateX(-1000px);
+        opacity: 0;
+        transform: translateX(-400px);
     }
     to {
-        transform: translateX(0);
+        opacity: 1;
+        transform: translateX(0px);
     }
 }
 
 @keyframes appearFromRight {
     from {
-        transform: translateX(1000px);
+        opacity: 0;
+        transform: translateX(400px);
     }
     to {
-        transform: translateX(0);
+        opacity: 1;
+        transform: translateX(0px);
     }
-}
-
-@mixin animate($animation, $duration) {
-    animation: $animation $duration;
 }
