--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,17 +1,21 @@
 <div class="content">
+    <h1 id="languages-title">Languages/Frameworks</h1>
     <div *ngFor="let language of languages" id="languages"
         [ngClass]="language.animation == true ? 'animate' : 'disabled'" class="about">
         <h3>{{language.title}}</h3>
         <img [src]="language.image" alt="{{language.title}}">
     </div>
+    <h1 id="tools-title">Tools</h1>
     <div *ngFor="let tool of tools" id="tools" class="about"
         [ngClass]="tool.animation == true ? 'animate' : 'disabled'">
         <h3>{{tool.title}}</h3>
         <img [src]="tool.image" alt="{{tool.title}}">
     </div>
+    <h1 id="hobbies-title">Hobbies</h1>
     <div *ngFor="let hobby of hobbies" id="hobbies" class="about"
         [ngClass]="hobby.animation == true ? 'animate' : 'disabled'">
         <h3>{{hobby.title}}</h3>
         <img [src]="hobby.image" alt="{{hobby.title}}">
     </div>
 </div>
+<app-go-up></app-go-up>
