--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     a {
-        margin: 20px 20px;
+        margin: 30px 20px;
         font-size: 2.2rem;
         font-weight: 600;
         color: #000;
@@ -12,7 +12,9 @@
             color: #8d72e1;
         }
     }
-    background-color: rgb(255, 255, 255, 0.3);
+    background-color: rgb(255, 255, 255, 0.4);
+    border-bottom: 1px solid #000;
+    margin-bottom: 4rem;
 }
 
 @media (max-width: 800px) {
