update on about + deploy app new tool

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,17 +5,17 @@
         <h3>{{language.title}}</h3>
         <img [src]="language.image" alt="{{language.title}}">
     </div>
-    <h1 id="tools-title">Tools</h1>
+    <h1 id="tools-title" class="title">Tools</h1>
     <div *ngFor="let tool of tools" id="tools" class="about"
         [ngClass]="tool.animation == true ? 'animate' : 'disabled'">
         <h3>{{tool.title}}</h3>
         <img [src]="tool.image" alt="{{tool.title}}">
     </div>
-    <h1 id="hobbies-title">Hobbies</h1>
+    <h1 id="hobbies-title" class="title">Hobbies</h1>
     <div *ngFor="let hobby of hobbies" id="hobbies" class="about"
         [ngClass]="hobby.animation == true ? 'animate' : 'disabled'">
         <h3>{{hobby.title}}</h3>
         <img [src]="hobby.image" alt="{{hobby.title}}">
     </div>
 </div>
-<app-go-up></app-go-up>
+<app-go-up id="go-up"></app-go-up>
