--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 .content {
     display: flex;
     flex-direction: column;
@@ -28,30 +29,37 @@
 }
 
 .animate {
-    @for $i from 1 through 24 {
+    @for $i from 1 through 25 {
         &:nth-child(#{$i}) {
             h3 {
-                animation: appearFromLeft #{($i / 20) + 0.4}s ease-in-out;
+                animation: appearFromLeft
+                    #{(math.div($i, 20)) +
+                    0.4}s
+                    ease-in-out;
             }
             img {
-                animation: appearFromRight #{($i / 20) + 0.4}s ease-in-out;
+                animation: appearFromRight
+                    #{(math.div($i, 20)) +
+                    0.4}s
+                    ease-in-out;
             }
         }
     }
 }
 
-#tools-title {
-    opacity: 0;
-    transition: opacity 1.3s ease-in-out;
-}
-
-#hobbies-title {
+.title {
     opacity: 0;
     transition: opacity 1.3s ease-in-out;
 }
 
 #languages-title {
-    animation: appearOpacity 1.3s ease-in-out;
+    animation: appearOpacity 0.5s ease-in-out;
+}
+
+#go-up {
+    visibility: hidden;
+    opacity: 0;
+    transition: all 1.3s ease-in-out;
 }
 
 .disabled {
