--- a/src/app/go-up/go-up.component.html
+++ b/src/app/go-up/go-up.component.html
@@ -1,4 +1,4 @@
-<a (click)="onActivate($event)">
+<a (click)="onActivate($event)" id="go-up">
     <div class="go-up">
         <img src="assets/images/arrow_up.svg" alt="Go up">
     </div>
